Added examples + test
Added an example of how to use the library. Its not the best dataset to
use, so I'll need to find a better one. Implementing this example lead
to the creation of a new test and the breaking of all others. I need to
find a way to check for classes being added via d3 (or scrap the
auto-adding of classes all together).

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "url": "https://github.com/kiernanmcgowan/d3-nelson-rules.git"
   },
   "scripts": {
-    "pretest": "mkdir -p build && node -e 'process.stdout.write(\"var version = \\\"\" + require(\"./package.json\").version + \"\\\"; export * from \\\"../index\\\"; export {version};\");' > build/bundle.js && rollup -f umd -u d3-nelson-rules -n d3_nelson_rules -o build/d3-nelson-rules.js -- build/bundle.js",
+    "pretest": "npm run build",
     "test": "faucet `find test -name '*-test.js'`",
+    "build": "mkdir -p build && node -e 'process.stdout.write(\"var version = \\\"\" + require(\"./package.json\").version + \"\\\"; export * from \\\"../index\\\"; export {version};\");' > build/bundle.js && rollup -f umd -u d3-nelson-rules -n d3_nelson_rules -o build/d3-nelson-rules.js -- build/bundle.js",
     "prepublish": "npm run test && uglifyjs build/d3-nelson-rules.js -c -m -o build/d3-nelson-rules.min.js && rm -f build/d3-nelson-rules.zip && zip -j build/d3-nelson-rules.zip -- LICENSE README.md build/d3-nelson-rules.js build/d3-nelson-rules.min.js"
   },
   "devDependencies": {
